// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Gif /> Click to set up current gif 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Gif
    gif={
      Object {
        "id": "XDXDXDXD",
        "images": Object {
          "original": Object {
            "url": "http://gif.com",
          },
        },
      }
    }
    onToggleFavorite={[Function]}
    starred={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="container"
      >
        <Favorite
          onToggleFavorite={[Function]}
          starred={false}
        />
        <Link
          replace={false}
          to="/view/XDXDXDXD"
        >
          <img
            alt="gif"
            onClick={[Function]}
            src="http://gif.com"
          />
        </Link>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Favorite
            onToggleFavorite={[Function]}
            starred={false}
          />,
          <Link
            replace={false}
            to="/view/XDXDXDXD"
          >
            <img
              alt="gif"
              onClick={[Function]}
              src="http://gif.com"
            />
          </Link>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onToggleFavorite": [Function],
            "starred": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <img
              alt="gif"
              onClick={[Function]}
              src="http://gif.com"
            />,
            "replace": false,
            "to": "/view/XDXDXDXD",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "gif",
              "onClick": [Function],
              "src": "http://gif.com",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="container"
        >
          <Favorite
            onToggleFavorite={[Function]}
            starred={false}
          />
          <Link
            replace={false}
            to="/view/XDXDXDXD"
          >
            <img
              alt="gif"
              onClick={[Function]}
              src="http://gif.com"
            />
          </Link>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Favorite
              onToggleFavorite={[Function]}
              starred={false}
            />,
            <Link
              replace={false}
              to="/view/XDXDXDXD"
            >
              <img
                alt="gif"
                onClick={[Function]}
                src="http://gif.com"
              />
            </Link>,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onToggleFavorite": [Function],
              "starred": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <img
                alt="gif"
                onClick={[Function]}
                src="http://gif.com"
              />,
              "replace": false,
              "to": "/view/XDXDXDXD",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "gif",
                "onClick": [Function],
                "src": "http://gif.com",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Gif /> Click to toggle favorites 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Gif
    gif={
      Object {
        "id": "XDXDXDXD",
        "images": Object {
          "original": Object {
            "url": "http://gif.com",
          },
        },
      }
    }
    onClickImage={[Function]}
    starred={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="container"
      >
        <Favorite
          onToggleFavorite={[Function]}
          starred={false}
        />
        <Link
          replace={false}
          to="/view/XDXDXDXD"
        >
          <img
            alt="gif"
            onClick={[Function]}
            src="http://gif.com"
          />
        </Link>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Favorite
            onToggleFavorite={[Function]}
            starred={false}
          />,
          <Link
            replace={false}
            to="/view/XDXDXDXD"
          >
            <img
              alt="gif"
              onClick={[Function]}
              src="http://gif.com"
            />
          </Link>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onToggleFavorite": [Function],
            "starred": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <img
              alt="gif"
              onClick={[Function]}
              src="http://gif.com"
            />,
            "replace": false,
            "to": "/view/XDXDXDXD",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "gif",
              "onClick": [Function],
              "src": "http://gif.com",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="container"
        >
          <Favorite
            onToggleFavorite={[Function]}
            starred={false}
          />
          <Link
            replace={false}
            to="/view/XDXDXDXD"
          >
            <img
              alt="gif"
              onClick={[Function]}
              src="http://gif.com"
            />
          </Link>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Favorite
              onToggleFavorite={[Function]}
              starred={false}
            />,
            <Link
              replace={false}
              to="/view/XDXDXDXD"
            >
              <img
                alt="gif"
                onClick={[Function]}
                src="http://gif.com"
              />
            </Link>,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onToggleFavorite": [Function],
              "starred": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <img
                alt="gif"
                onClick={[Function]}
                src="http://gif.com"
              />,
              "replace": false,
              "to": "/view/XDXDXDXD",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "gif",
                "onClick": [Function],
                "src": "http://gif.com",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Gif /> Gif Item renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Gif
    gif={
      Object {
        "id": "XDXDXDXD",
        "images": Object {
          "original": Object {
            "url": "http://gif.com",
          },
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="container"
      >
        <Favorite
          onToggleFavorite={[Function]}
          starred={undefined}
        />
        <Link
          replace={false}
          to="/view/XDXDXDXD"
        >
          <img
            alt="gif"
            onClick={[Function]}
            src="http://gif.com"
          />
        </Link>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Favorite
            onToggleFavorite={[Function]}
            starred={undefined}
          />,
          <Link
            replace={false}
            to="/view/XDXDXDXD"
          >
            <img
              alt="gif"
              onClick={[Function]}
              src="http://gif.com"
            />
          </Link>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onToggleFavorite": [Function],
            "starred": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <img
              alt="gif"
              onClick={[Function]}
              src="http://gif.com"
            />,
            "replace": false,
            "to": "/view/XDXDXDXD",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "gif",
              "onClick": [Function],
              "src": "http://gif.com",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="container"
        >
          <Favorite
            onToggleFavorite={[Function]}
            starred={undefined}
          />
          <Link
            replace={false}
            to="/view/XDXDXDXD"
          >
            <img
              alt="gif"
              onClick={[Function]}
              src="http://gif.com"
            />
          </Link>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Favorite
              onToggleFavorite={[Function]}
              starred={undefined}
            />,
            <Link
              replace={false}
              to="/view/XDXDXDXD"
            >
              <img
                alt="gif"
                onClick={[Function]}
                src="http://gif.com"
              />
            </Link>,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onToggleFavorite": [Function],
              "starred": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <img
                alt="gif"
                onClick={[Function]}
                src="http://gif.com"
              />,
              "replace": false,
              "to": "/view/XDXDXDXD",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "gif",
                "onClick": [Function],
                "src": "http://gif.com",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
